argocd/resources/funcional.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: argocd-gateway
  namespace: argocd
spec:
  gatewayClassName: cilium
  
  listeners:
  # - protocol: HTTP
  #   port: 1080
  #   name: web-gw
  #   allowedRoutes:
  #     namespaces:
  #       from: All
  - protocol: TLS
    port: 1443
    hostname: "*.cluster-hybrid.ddnsfree.com"
    name: web-gw-tls
    tls:
      mode: Terminate
      certificateRefs:
        - kind: Secret
          name: cluster-hybrid.ddnsfree.com-tls
    allowedRoutes:
      namespaces:
        from: All
        
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-route
  namespace: argocd
spec:
  parentRefs:
  - name: argocd-gateway
    namespace: argocd
  hostnames:
    - argocd.cluster-hybrid.ddnsfree.com
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: argocd-prd-server 
      port: 30080

---
apiVersion: v1
kind: Endpoints
metadata:
  name: argocd-gateway-lb
  namespace: argocd
subsets:
  - addresses:
      - ip: 10.0.1.100  
      - ip: 10.0.2.100  
    ports:
      - port: 1443
        protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: argocd-gateway-lb
  namespace: argocd
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
    service.beta.kubernetes.io/aws-load-balancer-target-type: "ip"
    service.beta.kubernetes.io/aws-load-balancer-scheme: "internet-facing"
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  ports:
  - port: 443
    protocol: TCP
    targetPort: 1443
  selector: {}
