argocd/resources/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: argocd-gateway
  namespace: argocd
spec:
  gatewayClassName: cilium
  listeners:
  # - protocol: HTTP
  #   port: 1080
  #   name: web-gw
  #   allowedRoutes:
  #     namespaces:
  #       from: All
  - protocol: TLS
    port: 1443
    name: web-gw-tls
    tls:
      mode: Passthrough
    allowedRoutes:
      namespaces:
        from: All
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TLSRoute
metadata:
  name: argocd-route
  namespace: argocd
spec:
  parentRefs:
    - name: argocd-gateway
  rules:
  - backendRefs:
      - name: argocd-prd-server  
        port: 30443

---
apiVersion: v1
kind: Service
metadata:
  name: cilium-gateway-argocd-gateway
  namespace: argocd
spec:
  type: ClusterIP
  selector:
    gateway.networking.k8s.io/gateway-name: argocd-gateway
  ports:
  - port: 1443
    targetPort: 1443
    protocol: TCP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  namespace: argocd
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/backend-protocol: HTTPS
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-prd-server
            port:
              number: 443

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alb-to-cilium-gateway
  namespace: argocd
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/backend-protocol: HTTPS
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cilium-gateway-argocd-gateway
            port:
              number: 1443
