argocd/resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  namespace: argocd
  annotations:
      nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
      nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
      nginx.ingress.kubernetes.io/use-regex: "false"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - argocd.cluster-hybrid.ddnsfree.com
      secretName: cluster-hybrid.ddnsfree.com-tls
  rules:
    - host: argocd.cluster-hybrid.ddnsfree.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-prd-server
                port:
                  number: 30080
